--- a/the-sites.html
+++ b/the-sites.html
@@ -33,7 +33,7 @@ layout: default
               <div class="description">
                 {% if site.lang == "fr" %}
                   {{ section1.descriptionSite1 }}
-                {% if site.lang == "de" %}
+                {% elsif site.lang == "de" %}
                   {{ section1.descriptionSite4De }}
                 {% else %}
                   {{ section1.descriptionSite1En }}
@@ -56,7 +56,7 @@ layout: default
               <div class="description">
                 {% if site.lang == "fr" %}
                   {{ section1.descriptionSite2 }}
-                {% if site.lang == "de" %}
+                {% elsif site.lang == "de" %}
                   {{ section1.descriptionSite4De }}
                 {% else %}
                   {{ section1.descriptionSite2En }}
@@ -79,7 +79,7 @@ layout: default
               <div class="description">
                 {% if site.lang == "fr" %}
                   {{ section1.descriptionSite3 }}
-                {% if site.lang == "de" %}
+                {% elsif site.lang == "de" %}
                   {{ section1.descriptionSite4De }}
                 {% else %}
                   {{ section1.descriptionSite3En }}
@@ -102,7 +102,7 @@ layout: default
               <div class="description">
                 {% if site.lang == "fr" %}
                   {{ section1.descriptionSite4 }}
-                {% if site.lang == "de" %}
+                {% elsif site.lang == "de" %}
                   {{ section1.descriptionSite4De }}
                 {% else %}
                   {{ section1.descriptionSite4En }}
@@ -150,7 +150,7 @@ layout: default
               <div class="description">
                 {% if site.lang == "fr" %}
                   {{ section2.descriptionSite1 }}
-                {% if site.lang == "de" %}
+                {% elsif site.lang == "de" %}
                   {{ section2.descriptionSite4De }}
                 {% else %}
                   {{ section2.descriptionSite1En }}
@@ -173,7 +173,7 @@ layout: default
               <div class="description">
                 {% if site.lang == "fr" %}
                   {{ section2.descriptionSite2 }}
-                {% if site.lang == "de" %}
+                {% elsif site.lang == "de" %}
                   {{ section2.descriptionSite4De }}
                 {% else %}
                   {{ section2.descriptionSite2En }}
@@ -196,7 +196,7 @@ layout: default
               <div class="description">
                 {% if site.lang == "fr" %}
                   {{ section2.descriptionSite3 }}
-                {% if site.lang == "de" %}
+                {% elsif site.lang == "de" %}
                   {{ section2.descriptionSite4De }}
                 {% else %}
                   {{ section2.descriptionSite3En }}
@@ -219,7 +219,7 @@ layout: default
               <div class="description">
                 {% if site.lang == "fr" %}
                   {{ section2.descriptionSite4 }}
-                {% if site.lang == "de" %}
+                {% elsif site.lang == "de" %}
                   {{ section2.descriptionSite4De }}
                 {% else %}
                   {{ section2.descriptionSite4En }}
